# claudetube

./: .dockerignore  .flake8  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES.md  claudetube-roadmap.md  glama.json  install.ps1  install.sh  plugin.json  pyproject.toml  requirements.txt  server.json
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
.claude/commands/: summarize-video.md  watch_youtube.md
.claude/hooks/: handle-visual-analysis.sh
.github/workflows/: ci.yml  publish.yml
commands/: claudetube.md  yt.md
commands/yt/: accessible.md  ask.md  bookmark.md  bookmarks.md  changes-get.md  changes.md  chapters.md  code-get.md  code-query.md  code-track.md  deep.md  describe-moment.md  describe.md  enrichment.md  entities.md  find.md  focus.md  goto.md  graph-connections.md  graph-index.md  graph-search.md  graph-stats.md  has-ad.md  hq.md  list.md  narrative-get.md  narrative.md  next.md  people.md  playlist-context.md  playlist-graph.md  playlist.md  playlists.md  progress.md  providers.md  qa-record.md  qa-search.md  resume.md  scene-context.md  scenes.md  (+9 more)
documentation/: 3blue1brown-neural-networks-guide.md  README.md  SUBMISSIONS.md  SUBMISSION_COPY.md  architecture.md  better-ralph-loops-using-beads.md  docker.md  mcp-setup.md
documentation/architecture/: architecture.md  principles.md
documentation/concepts/: frames.md  pipeline.md  scenes.md  transcripts.md  video-understanding.md
documentation/getting-started/: installation.md  mcp-setup.md  quickstart.md
documentation/guides/: configuration.md  docker.md  mcp-setup.md  tool-reference.md  youtube-auth.md
documentation/prds/: audio-description-tracks.md  channel-surfing-navigation.md  claudetube-roadmap.md  configurable-ai-providers-epics.md  configurable-ai-providers.md  hierarchical-storage-sqlite-index.md  visual-understanding-protocol.md  youtube-po-token-sabr-support.md
documentation/release-notes/: RELEASE_NOTES.md
documentation/vision/: beyond-transcripts.md  problem-space.md  roadmap.md
examples/: config.cloud-hybrid.yaml  config.full.yaml  config.gemini-video.yaml  config.local-only.yaml  config.minimal.yaml
scripts/: benchmark_ocr.py  extract_followups.sh
scripts/debug/: debug-mcp-wrapper.sh  test_mcp_minimal.py
scripts/hooks/: bd-sync-rich.sh  post-task.sh  pre-task.sh
scripts/ralph/: CLAUDE.md  progress.txt  ralph-beads.sh
src/claudetube/: __init__.py  cli.py  core.py  exceptions.py  fast.py  mcp_server.py  urls.py
src/claudetube/analysis/: __init__.py  alignment.py  attention.py  code.py  comprehension.py  embeddings.py  linguistic.py  ocr.py  pause.py  search.py  unified.py  vector_index.py  visual.py  visual_criticality.py  vocabulary.py  watcher.py
src/claudetube/cache/: __init__.py  enrichment.py  entities.py  knowledge_graph.py  manager.py  memory.py  scenes.py  storage.py
src/claudetube/config/: __init__.py  defaults.py  loader.py  output_templates.py  providers.py  quality.py
src/claudetube/db/: __init__.py  connection.py  importer.py  migrate.py  queries.py  sync.py  vec.py
src/claudetube/db/migrations/: 001_initial.sql  001_initial.vec.sql
src/claudetube/db/repos/: __init__.py  audio_descriptions.py  audio_tracks.py  code_evolution.py  entities.py  frames.py  narrative.py  observations.py  pipeline.py  playlists.py  qa.py  scenes.py  technical_content.py  transcriptions.py  videos.py  visual_descriptions.py
src/claudetube/models/: __init__.py  chapter.py  local_file.py  state.py  video_file.py  video_path.py  video_result.py  video_url.py
src/claudetube/navigation/: __init__.py  context.py  cross_video.py  learning.py  progress.py
src/claudetube/operations/: __init__.py  analysis_depth.py  audio_description.py  change_detection.py  chapters.py  code_evolution.py  download.py  entity_extraction.py  extract_frames.py  factory.py  knowledge_graph.py  narrative_structure.py  person_tracking.py  playlist.py  processor.py  segmentation.py  subtitles.py  transcribe.py  visual_transcript.py  watch.py
src/claudetube/parsing/: __init__.py  params.py  utils.py
src/claudetube/providers/: __init__.py  base.py  capabilities.py  config.py  local_embedder.py  registry.py  router.py  schemas.py  types.py  whisper_local.py
src/claudetube/providers/anthropic/: __init__.py  client.py
src/claudetube/providers/assemblyai/: __init__.py  client.py
src/claudetube/providers/claude_code/: __init__.py  client.py
src/claudetube/providers/deepgram/: __init__.py  client.py
src/claudetube/providers/google/: __init__.py  client.py
src/claudetube/providers/litellm/: __init__.py  client.py
src/claudetube/providers/ollama/: __init__.py  client.py
src/claudetube/providers/openai/: __init__.py  chunker.py  client.py
src/claudetube/providers/voyage/: __init__.py  client.py
src/claudetube/tools/: __init__.py  base.py  ffmpeg.py  ffprobe.py  progress.py  whisper.py  yt_dlp.py
src/claudetube/utils/: __init__.py  formatting.py  logging.py  system.py
tests/: conftest.py  deep_integration_test.py  integration_test.py  test_ad_generator.py  test_ad_mcp_tools.py  test_alignment.py  test_analysis_depth.py  test_attention.py  test_audio_description.py  test_cache_knowledge_graph.py  test_cache_local_file.py  test_cache_storage.py  test_change_detection.py  test_chapters.py  test_cli_migrate.py  test_cli_validate_config.py  test_code.py  test_code_evolution.py  test_comprehension.py  test_config_loader.py  test_config_project.py  test_config_user.py  test_core.py  test_cross_video_search.py  test_db_connection.py  test_db_importer.py  test_db_repos.py  test_db_sync.py  test_db_vec.py  test_download.py  test_download_exceptions.py  test_embeddings.py  test_embeddings_provider.py  test_enrichment.py  test_entities.py  test_entity_extraction_operation.py  test_extract_frames_local.py  test_integration_2a6_4.py  test_knowledge_graph.py  test_learning_intelligence.py  (+54 more)
tests/integration/: test_mcp_tools_e2e.py  test_provider_apis.py  test_provider_routing.py
