[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudetube"
version = "0.3.0"
description = "Let Claude watch YouTube videos - transcripts + on-demand frame extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daniel Barrett"}
]
keywords = ["youtube", "video", "summarization", "whisper", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yt-dlp",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "flake8",
    "isort",
    "build",
]

[project.scripts]
claudetube = "claudetube.cli:main"
claudetube-mcp = "claudetube.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
