[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudetube"
version = "1.0.0rc1"
description = "Let Claude watch YouTube videos - transcripts + on-demand frame extraction"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Daniel Barrett"}
]
keywords = ["youtube", "video", "summarization", "whisper", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yt-dlp>=2026.01.15",
    "faster-whisper>=1.0.0",
    "pysubs2>=1.6.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.0.0",
    "scenedetect[opencv]>=0.6.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2.0",
]
ocr = [
    "easyocr>=1.7.0",
]
search = [
    "chromadb>=0.4.0",
]
embeddings = [
    "voyageai>=0.2.0",
]
embeddings-local = [
    "sentence-transformers>=2.2.0",
    "open-clip-torch>=2.20.0",
    "torch>=2.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
google = [
    "google-generativeai>=0.5.0",
]
deepgram = [
    "deepgram-sdk>=3.0.0",
]
assemblyai = [
    "assemblyai>=0.30.0",
]
ollama = [
    "ollama>=0.3.0",
]
litellm = [
    "litellm>=1.0.0",
]
youtube-pot = [
    "bgutil-ytdlp-pot-provider>=1.2.0",
]
all-providers = [
    "claudetube[openai,anthropic,google,deepgram,assemblyai,ollama,litellm]",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
]

[project.scripts]
claudetube = "claudetube.cli:main"
claudetube-mcp = "claudetube.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "deep_integration: deep integration test against real playlist (slow, requires network)",
    "integration: integration test against real provider APIs (requires API keys)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["claudetube"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (needed for FastAPI/Pydantic)
]

[tool.ruff.lint.isort]
known-first-party = ["claudetube"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
mypy_path = "src"
packages = ["claudetube.providers", "claudetube.models", "claudetube.exceptions"]

[[tool.mypy.overrides]]
module = [
    "faster_whisper.*",
    "chromadb.*",
    "easyocr.*",
    "voyageai.*",
    "google.generativeai.*",
    "sentence_transformers.*",
    "open_clip.*",
    "torch.*",
    "scenedetect.*",
    "sklearn.*",
    "pygments.*",
    "deepgram.*",
    "assemblyai.*",
    "ollama.*",
    "litellm.*",
    "openai.*",
    "anthropic.*",
    "yaml.*",
    "pydantic.*",
    "mcp.*",
]
ignore_missing_imports = true
